<resources>
    <string name="app_name">Book</string>
    <string name="title_home">Home</string>
    <string name="title_gemini">Gemini-pro</string>
    <string name="title_account">Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- SearchFragment -->
    <string name="search_title_string">書籍検索方法</string>
    <string name="search_book_id_string">書籍idによる検索</string>
    <string name="search_book_id">書籍idを入力</string>
    <string name="search_book_title_string">書籍タイトルによる検索</string>
    <string name="search_book_title">書籍タイトルを入力</string>
    <string name="search_string">検索</string>
    <string name="search_result_string">検索結果</string>
    <!-- -->

    <!-- RegisterFragment -->
    <string name="register_id_string">書籍IDを入力</string>
    <string name="register_title_string">書籍タイトルを入力</string>
    <string name="register_author_string">書籍著者を入力</string>
    <string name="register_book_button_string">送信</string>
    <!-- -->

    <!-- AccountFragment -->
    <string name="account_edit_string">編集</string>
    <string name="account_edit_cancel_string">キャンセル</string>
    <string name="account_save_string">保存</string>
    <string name="account_edit_user_name_string">名前</string>
    <!-- -->

    <!-- GeminiFragment  -->
    <string name="gemini_chat_send_string">送信</string>
    <string name="gemini_chat_message_hint_string">メッセージを入力</string>
    <!-- -->

    <!-- -->
    <!-- -->
</resources>